config("duilib_config") {
    include_dirs = [
        "//third_party/Duilib",
    ]

    defines = [
        "DUILIB_STATIC",
    ]

    cflags = [
        "-Wno-overloaded-virtual",
        "-Wno-reorder-ctor",
        "-Wno-unused-variable",
        "-Wno-incomplete-implementation",
        "-Wno-pointer-to-int-cast",
        "-Wno-parentheses",
        "-Wno-rtti",
        "-Wno-delete-non-virtual-dtor",
        "-Wno-unused-but-set-variable",
        "-Wno-string-conversion",
        "-Wno-shadow",
        "-Wno-c++11-narrowing",
        "-Wno-sign-compare",
        "-Wno-non-literal-null-conversion",
        "-Wno-unused-private-field",
        "-Wno-microsoft-goto",
        "-Wno-self-assign",
        "-Wno-missing-braces",
        "-Wno-microsoft-cast",
        "-Wno-tautological-constant-out-of-range-compare",
        "-Wno-exceptions",
        "-Wno-bool-conversion",
        "-Wno-inconsistent-missing-override",
        "-Wno-unused-function",
        "-Wno-implicit-fallthrough", 
        "-Wno-unreachable-code",
        "-Wno-invalid-offsetof",
        "-Wno-unreachable-code-break",
        "-Wno-register",
        "-Wno-unreachable-code-return", 
        "-Wno-unused-value",
        "-Wno-misleading-indentation",
        "-Wno-c++98-compat-extra-semi",
        "-Wno-delete-incomplete",
    ]
}

static_library("duilib") {
    sources =  [
        "stdafx.h",
        "stdafx.cpp",
        "Uilib.h",
        "Control/UIActiveX.cpp",
        "Control/UIActiveX.h",
        "Control/UIAnimation.cpp",
        "Control/UIAnimation.h",
        "Control/UIButton.cpp",
        "Control/UIButton.h",
        "Control/UIColorPalette.cpp",
        "Control/UIColorPalette.h",
        "Control/UICombo.cpp",
        "Control/UICombo.h",
        "Control/UIComboBox.cpp",
        "Control/UIComboBox.h",
        "Control/UIDateTime.cpp",
        "Control/UIDateTime.h",
        "Control/UIEdit.cpp",
        "Control/UIEdit.h",
        "Control/UIFadeButton.cpp",
        "Control/UIFadeButton.h",
        "Control/UIFlash.cpp",
        "Control/UIFlash.h",
        "Control/UIGifAnim.cpp",
        "Control/UIGifAnim.h",
        "Control/UIGifAnimEx.cpp",
        "Control/UIGifAnimEx.h",
        "Control/UIGroupBox.cpp",
        "Control/UIGroupBox.h",
        "Control/UIHotKey.cpp",
        "Control/UIHotKey.h",
        "Control/UIIPAddress.cpp",
        "Control/UIIPAddress.h",
        "Control/UIIPAddressEx.cpp",
        "Control/UIIPAddressEx.h",
        "Control/UILabel.cpp",
        "Control/UILabel.h",
        "Control/UIList.cpp",
        "Control/UIList.h",
        "Control/UIListEx.cpp",
        "Control/UIListEx.h",
        "Control/UILoading.cpp",
        "Control/UILoading.h",
        "Control/UIMenu.cpp",
        "Control/UIMenu.h",
        "Control/UIOption.cpp",
        "Control/UIOption.h",
        "Control/UIPageControl.cpp",
        "Control/UIPageControl.h",
        "Control/UIProgress.cpp",
        "Control/UIProgress.h",
        "Control/UIRichEdit.cpp",
        "Control/UIRichEdit.h",
        "Control/UIRing.cpp",
        "Control/UIRing.h",
        "Control/UIRollText.cpp",
        "Control/UIRollText.h",
        "Control/UIScrollBar.cpp",
        "Control/UIScrollBar.h",
        "Control/UISlider.cpp",
        "Control/UISlider.h",
        "Control/UIText.cpp",
        "Control/UIText.h",
        "Control/UITreeView.cpp",
        "Control/UITreeView.h",
        "Control/UIWebBrowser.cpp",
        "Control/UIWebBrowser.h",
        "Core/ControlFactory.cpp",
        "Core/ControlFactory.h",
        "Core/UIBase.cpp",
        "Core/UIBase.h",
        "Core/UIContainer.cpp",
        "Core/UIContainer.h",
        "Core/UIControl.cpp",
        "Core/UIControl.h",
        "Core/UIDlgBuilder.cpp",
        "Core/UIDlgBuilder.h",
        "Core/UIManager.cpp",
        "Core/UIManager.h",
        "Core/UIMarkup.cpp",
        "Core/UIMarkup.h",
        "Core/UIRender.cpp",
        "Core/UIRender.h",
        "Core/UIResourceManager.cpp",
        "Core/UIResourceManager.h",
        "Layout/UIAnimationTabLayout.cpp",
        "Layout/UIAnimationTabLayout.h",
        "Layout/UIChildLayout.cpp",
        "Layout/UIChildLayout.h",
        "Layout/UIHorizontalLayout.cpp",
        "Layout/UIHorizontalLayout.h",
        "Layout/UITabLayout.cpp",
        "Layout/UITabLayout.h",
        "Layout/UITileLayout.cpp",
        "Layout/UITileLayout.h",
        "Layout/UIVerticalLayout.cpp",
        "Layout/UIVerticalLayout.h",
        "Utils/downloadmgr.h",
        "Utils/DPI.cpp",
        "Utils/DPI.h",
        "Utils/DragDropImpl.cpp",
        "Utils/DragDropImpl.h",
        "Utils/FlashEventHandler.h",
        "Utils/observer_impl_base.h",
        "Utils/stb_image.h",
        "Utils/TrayIcon.cpp",
        "Utils/TrayIcon.h",
        "Utils/UIDelegate.cpp",
        "Utils/UIDelegate.h",
        "Utils/UIShadow.cpp",
        "Utils/UIShadow.h",
        "Utils/unzip.cpp",
        "Utils/unzip.h",
        "Utils/Utils.cpp",
        "Utils/Utils.h",
        "Utils/VersionHelpers.h",
        "Utils/VersionHelpers.cpp",
        "Utils/WebBrowserEventHandler.h",
        "Utils/WinImplBase.cpp",
        "Utils/WinImplBase.h",
    ]

    configs += [ ":duilib_config" ]
}